--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "dependencies": {
     "react": "16.3.2",
     "react-dom": "16.3.2",
-    "react-scripts": "1.1.4"
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
+    "react-scripts": "1.1.4",
+    "react-testing-library": "3.0.2"
   },
   "devDependencies": {},
   "scripts": {
